--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ certifi==2023.5.7
 charset-normalizer==3.2.0
 contourpy==1.1.0
 cycler==0.11.0
+et-xmlfile==1.1.0
 fonttools==4.41.0
 frozendict==2.3.8
 html5lib==1.1
@@ -13,6 +14,7 @@ lxml==4.9.3
 matplotlib==3.7.2
 multitasking==0.0.11
 numpy==1.25.1
+openpyxl==3.1.2
 packaging==23.1
 pandas==2.0.3
 pandas-datareader==0.10.0
